# Bee8086

./: CMakeLists.txt  LEGAL.md  README.md
Bee8086/: bee8086.cpp  bee8086.h  disassembly.inl  instructions.inl
Bee8086-SDL2/: CMakeLists.txt  beefloppy.h  beemda.h  main.cpp  mda_rom.inl
Bee8086-SDL2/bios_source/: kujobios.asm
tools/: msys_dist.sh
